Fixed button, fonts, form alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,14 +13,20 @@ body{
     background-image: url(surveyback.jpeg);
     color: white;
     padding: 30px 100px;
+    font-family: 'Roboto Mono', sans-serif;
 }
 
 #page-container{
   background-color: rgba(138, 43, 226, 0.3);
+  padding: 20px;
 }
 
 #form-header{
     text-align: center;
+}
+
+#form-description{
+   /*change if I want*/
 }
 
 #form-title{
@@ -41,6 +47,13 @@ body{
     padding: 40px;
     background-color: black;
 }
+label{
+   margin-bottom: 10px;
+} 
+
+.form-group{
+    margin-bottom: 20px;
+}
 
 label, input{
     display: block;
@@ -50,20 +63,28 @@ label, input{
     display: inline-block;
 }
 
-#submit-btn{
-    margin: auto;
-    width: 20%;
-    padding-top:10px;
-    padding-bottom:10px;
-    color: #fff;
-    background-color: var(--buttonColor);
-    border: none; 
-    display: flex;
-    justify-content: center;
-    border-radius: 50%;
-    
-    
+input, textarea, select{
+    padding: 10px;
+    width: 100%;
 }
+
+.checkbox-group input{
+    width: auto;
+}
+
+#submit-form{
+    text-align: center;
+}
+
+button{
+     background-color: #047fca;
+     padding: 22px 62px;
+     color: white;
+     border-radius: 50px;
+     /* can use % for border-radius also to round it, but might not round it properly*/
+     
+}
+
 
 ul {
     list-style: none;
